force-app/main/default/objects/Flight_Passenger__c/Flight_Passenger__c.object-meta.xml
<CustomObject>
    <label>Flight Passenger</label>
    <nameField>
        <displayFormat>FP-{00000}</displayFormat>
        <label>Flight Passenger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Passengers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>