force-app/main/default/objects/Flight_Passenger__c/fields/Passenger__c.field-meta.xml
<CustomField>
    <fullName>Passenger__c</fullName>
    <label>Passenger</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flight_Passengers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>